--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "build:umd": "node tasks/copy-html.js && tsc --outDir dist --declaration",
-    "build:esm": "rollup -c rollup.config.js --output dist/ng-vcl.esm.js",
-    "build": "npm run build:umd && npm run build:esm",
+    "demo": "npm run dev",
+    "dev": "npm-run-all dev:vcl --parallel dev:serve dev:styles",
+    "dev:serve": "webpack-dev-server --env.ENV development",
+    "dev:vcl": "vcl-preprocessor styles/index.styl | postcss --use autoprefixer -o demo/app.css",
+    "dev:styles": "fsmonitor -d 'styles' npm run dev:vcl",
+    "build:copy": "node scripts/copy-html.js",
+    "build:umd": "tsc --outDir dist --declaration  -p tsconfig.umd.json",
+    "build:es": "tsc --outDir dist/es --declaration -p tsconfig.es.json",
+    "build": "npm-run-all build:copy build:es build:umd",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,9 +26,9 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "main": "dist/index.js",
-  "jsnext:main": "dist/ng-vcl.esm.js",
+  "jsnext:main": "dist/es/index.js",
   "jspm": {
-    "main": "dist/ng-vcl.esm.js",
+    "main": "dist/es/index.js",
     "format": "esm"
   },
   "typings": "dist/index.d.ts",
@@ -30,26 +36,43 @@
     "@angular/core": "^2.0.0-rc"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.28",
+    "@types/node": "^4.0.30",
+
     "@angular/common": "^2.0.0-rc.4",
     "@angular/compiler": "^2.0.0-rc.4",
     "@angular/core": "^2.0.0-rc.4",
     "@angular/platform-browser": "^2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "@angular/router": "^3.0.0-beta.1",
+    "browser-sync": "^2.14.0",
+    "connect-history-api-fallback": "^1.2.0",
+    "core-js": "^2.4.1",
     "cpr": "^1.1.2",
-    "es6-shim": "^0.35.1",
     "express": "^4.14.0",
     "express-middleware-rollup": "^1.1.0",
-    "reflect-metadata": "^0.1.3",
-    "rollup": "^0.34.3",
-    "rollup-plugin-angular": "^0.2.0",
-    "rollup-plugin-commonjs": "^3.3.1",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-string": "^2.0.2",
-    "rollup-plugin-typescript": "^0.7.7",
+    "npm-run-all": "^2.3.0",
+
     "rxjs": "5.0.0-beta.6",
     "typescript": "^2.0.0",
-    "zone.js": "0.6.12"
+    "zone.js": "0.6.12",
+
+
+    "awesome-typescript-loader": "^2.0.1",
+    "ignore-loader": "^0.1.1",
+    "raw-loader": "^0.5.1",
+    "webpack": "^2.1.0-beta.20",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^2.1.0-beta.0",
+
+    "vcl-core-modules": "^0.1.0",
+    "vcl-default-theme": "^0.1.0",
+    "vcl-default-theme-terms": "^0.1.0",
+    "vcl-font-awesome": "^0.1.0",
+    "vcl-preprocessor": "^0.1.0",
+    "postcss-cli": "^2.5.2",
+    "autoprefixer": "^6.3.6",
+    "fsmonitor": "^0.2.4"
   },
   "dependencies": {
     "express-middleware-rollup": "^1.1.0"
