--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "demo": "npm run dev",
     "dev": "npm-run-all dev:vcl --parallel dev:serve dev:styles",
     "dev:serve": "webpack-dev-server --env.ENV development",
-    "dev:vcl": "vcl-preprocessor styles/index.styl | postcss --use autoprefixer -o demo/app.css",
-    "dev:styles": "fsmonitor -d 'styles' npm run dev:vcl",
+    "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
+    "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
     "build:copy": "node scripts/copy-html.js",
     "build:umd": "tsc --outDir dist --declaration  -p tsconfig.umd.json",
     "build:es": "tsc --outDir dist/es --declaration -p tsconfig.es.json",
