--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
     "build:copy": "node scripts/copy-html.js",
-    "build:umd": "tsc --outDir dist --declaration  -p tsconfig.umd.json",
-    "build:es": "tsc --outDir dist/es --declaration -p tsconfig.es.json",
-    "build": "npm-run-all build:copy build:es build:umd",
+    "build:cjs": "tsc --outDir dist --declaration  -p tsconfig.cjs.json",
+    "build:es": "tsc --outDir dist/es --declaration -p tsconfig.esm.json",
+    "build": "npm-run-all build:copy build:es build:cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +27,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "jsnext:main": "dist/es/index.js",
+  "module": "dist/es/index.js",
   "jspm": {
     "main": "dist/es/index.js",
     "format": "esm"
@@ -36,43 +37,39 @@
     "@angular/core": "^2.0.0-rc"
   },
   "devDependencies": {
+    "@angular/common": "^2.0.0-rc.5",
+    "@angular/compiler": "^2.0.0-rc.5",
+    "@angular/compiler-cli": "^0.5.0",
+    "@angular/core": "^2.0.0-rc.5",
+    "@angular/platform-browser": "^2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
+    "@angular/router": "^3.0.0-rc.1",
     "@types/core-js": "^0.9.28",
     "@types/node": "^4.0.30",
-
-    "@angular/common": "^2.0.0-rc.4",
-    "@angular/compiler": "^2.0.0-rc.4",
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/platform-browser": "^2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
-    "@angular/router": "^3.0.0-beta.1",
+    "angular2-template-loader": "^0.4.0",
+    "autoprefixer": "^6.3.6",
+    "awesome-typescript-loader": "^2.1.1",
     "browser-sync": "^2.14.0",
     "connect-history-api-fallback": "^1.2.0",
     "core-js": "^2.4.1",
     "cpr": "^1.1.2",
     "express": "^4.14.0",
-    "express-middleware-rollup": "^1.1.0",
+    "fsmonitor": "^0.2.4",
+    "ignore-loader": "^0.1.1",
     "npm-run-all": "^2.3.0",
-
+    "postcss-cli": "^2.5.2",
+    "raw-loader": "^0.5.1",
     "rxjs": "5.0.0-beta.6",
     "typescript": "^2.0.0",
-    "zone.js": "0.6.12",
-
-
-    "awesome-typescript-loader": "^2.0.1",
-    "ignore-loader": "^0.1.1",
-    "raw-loader": "^0.5.1",
-    "webpack": "^2.1.0-beta.20",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^2.1.0-beta.0",
-
     "vcl-core-modules": "^0.1.0",
     "vcl-default-theme": "^0.1.0",
     "vcl-default-theme-terms": "^0.1.0",
     "vcl-font-awesome": "^0.1.0",
     "vcl-preprocessor": "^0.1.0",
-    "postcss-cli": "^2.5.2",
-    "autoprefixer": "^6.3.6",
-    "fsmonitor": "^0.2.4"
+    "webpack": "^2.1.0-beta.20",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^2.1.0-beta.0",
+    "zone.js": "0.6.12"
   },
   "dependencies": {
     "express-middleware-rollup": "^1.1.0"
