--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "umd",
+    "target": "es2015",
+    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": true,
+    "outDir": "dist/es",
     "types": [
-      "core-js"
+      "node"
     ]
   },
   "exclude": [
@@ -15,5 +15,8 @@
   ],
   "include": [
     "./src/**/*.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "genDir": "dist/es"
+  }
 }
