--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/router": "^3.0.0-rc.1",
     "@types/core-js": "^0.9.28",
     "@types/node": "^4.0.30",
+    "@types/tether": "^1.1.26",
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.6",
     "awesome-typescript-loader": "^2.1.1",
@@ -72,6 +73,6 @@
     "zone.js": "0.6.12"
   },
   "dependencies": {
-    "express-middleware-rollup": "^1.1.0"
+    "tether": "^1.3.4"
   }
 }
