--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/compiler": "^2.0.0-rc.5",
     "@angular/compiler-cli": "^0.5.0",
     "@angular/core": "^2.0.0-rc.5",
+    "@angular/http": "^2.0.0-rc.5",
     "@angular/platform-browser": "^2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
     "@angular/router": "^3.0.0-rc.1",
@@ -60,7 +61,7 @@
     "npm-run-all": "^2.3.0",
     "postcss-cli": "^2.5.2",
     "raw-loader": "^0.5.1",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.11",
     "typescript": "^2.0.0",
     "vcl-core-modules": "^0.1.0",
     "vcl-default-theme": "^0.1.0",
