--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   "jsnext:main": "dist/ng-vcl.esm.js",
   "module": "dist/ng-vcl.esm.js",
   "jspm": {
-    "main": "dist/index.js",
-    "format": "cjs"
+    "main": "dist/ng-vcl.esm.js",
+    "format": "esm"
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0-rc"
