--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "outDir": "dist",
     "types": [
       "core-js"
