--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "outDir": "dist",
+    "allowSyntheticDefaultImports": true,
+    "outDir": "dist", 
     "types": [
       "core-js",
       "node"
