--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
     "@angular/router": "^3.0.0-rc.1",
     "@types/core-js": "^0.9.28",
-    "@types/node": "^4.0.30",
     "@types/tether": "^1.1.26",
+    "@types/requirejs": "^2.1.26",
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.6",
     "awesome-typescript-loader": "^2.1.1",
