--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/compiler-cli": "^0.5.0",
     "@angular/core": "^2.0.0-rc.5",
     "@angular/http": "^2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
     "@angular/platform-browser": "^2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
     "@angular/router": "^3.0.0-rc.1",
@@ -79,6 +80,7 @@
     "zone.js": "0.6.12"
   },
   "dependencies": {
+    "hammerjs": "^2.0.8",
     "tether": "^1.3.4"
   }
 }
