--- a/package.json
+++ b/package.json
@@ -38,49 +38,49 @@
     "@angular/core": "^2.0.0-rc"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/compiler-cli": "^0.5.0",
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/http": "^2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/platform-browser": "^2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
-    "@angular/router": "^3.0.0-rc.1",
-    "@types/core-js": "^0.9.28",
-    "@types/tether": "^1.1.26",
+    "@angular/common": "^2.0.0-rc.6",
+    "@angular/compiler": "^2.0.0-rc.6",
+    "@angular/compiler-cli": "^0.6.0",
+    "@angular/core": "^2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "^2.0.0-rc.6",
+    "@angular/platform-browser": "^2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.6",
+    "@angular/router": "^3.0.0-rc.2",
+    "@types/core-js": "^0.9.32",
     "@types/requirejs": "^2.1.26",
-    "angular2-template-loader": "^0.4.0",
-    "autoprefixer": "^6.3.6",
-    "awesome-typescript-loader": "^2.1.1",
-    "browser-sync": "^2.14.0",
-    "connect-history-api-fallback": "^1.2.0",
+    "@types/tether": "^1.1.26",
+    "angular2-template-loader": "^0.5.0",
+    "autoprefixer": "^6.4.0",
+    "awesome-typescript-loader": "^2.2.1",
+    "browser-sync": "^2.14.3",
+    "connect-history-api-fallback": "^1.3.0",
     "core-js": "^2.4.1",
-    "cpr": "^1.1.2",
+    "cpr": "^2.0.0",
     "express": "^4.14.0",
     "fsmonitor": "^0.2.4",
     "ignore-loader": "^0.1.1",
-    "npm-run-all": "^2.3.0",
-    "postcss-cli": "^2.5.2",
+    "npm-run-all": "^3.0.0",
+    "postcss-cli": "^2.6.0",
     "raw-loader": "^0.5.1",
-    "rollup": "^0.34.10",
+    "rollup": "^0.34.12",
     "rollup-plugin-angular": "^0.2.3",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-typescript": "^0.8.1",
     "rxjs": "5.0.0-beta.11",
-    "typescript": "^2.0.0",
-    "vcl-core-modules": "^0.1.0",
-    "vcl-default-theme": "^0.1.0",
+    "typescript": "^2.0.2",
+    "vcl-core-modules": "^0.1.1",
+    "vcl-default-theme": "^0.1.1",
     "vcl-default-theme-terms": "^0.1.0",
     "vcl-font-awesome": "^0.1.0",
-    "vcl-preprocessor": "^0.1.0",
+    "vcl-preprocessor": "^0.1.1",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.1.0-beta.0",
-    "zone.js": "0.6.12"
+    "zone.js": "0.6.17"
   },
   "dependencies": {
     "hammerjs": "^2.0.8",
-    "tether": "^1.3.4"
+    "tether": "^1.3.5"
   }
 }
