--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "dev:serve": "webpack-dev-server --env.ENV development",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
-    "build:copy": "node scripts/copy-html.js",
-    "build:cjs": "tsc --declaration -p tsconfig.cjs.json",
-    "build:esm": "tsc --declaration -p tsconfig.esm.json",
-    "build:esm-rollup": "rollup -c rollup.config.js",
-    "build": "npm-run-all build:copy build:cjs build:esm-rollup",
+    "build:desclarations": "tsc --declaration -p tsconfig.cjs.json",
+    "build:rollup": "rollup -c rollup.config.js",
+    "build": "npm-run-all build:rollup build:desclarations",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,7 +24,7 @@
   ],
   "author": "The ng-vcl authors",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "dist/ng-vcl.cjs.js",
   "typings": "dist/index.d.ts",
   "jsnext:main": "dist/ng-vcl.esm.js",
   "module": "dist/ng-vcl.esm.js",
