--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -14,9 +14,5 @@
   },
   "exclude": [
     "node_modules"
-  ],
-  "include": [
-    "./src/**/*.ts",
-    "./demo/**/*.ts"
   ]
 }
