enable ngc build revert back to cjs

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -18,5 +18,10 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "genDir": "./dist/aot",
+    "skipTemplateCodegen": true,
+    "debug": true
+  }
 }
