--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
     "build:lint": "tslint src/**/*.ts",
+    "build:ngc": "ngc -p tsconfig.build.json",
     "build:declarations": "tsc -p tsconfig.build.json",
     "build:bundles": "rollup -c rollup.config.js",
-    "build": "npm-run-all build:lint build:bundles build:declarations",
+    "build": "npm-run-all build:lint build:bundles build:declarations build:ngc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,7 +26,7 @@
   ],
   "author": "The ng-vcl authors",
   "license": "MIT",
-  "main": "dist/ng-vcl.umd.js",
+  "main": "dist/ng-vcl.cjs.js",
   "typings": "dist/index.d.ts",
   "jsnext:main": "dist/ng-vcl.esm.js",
   "module": "dist/ng-vcl.esm.js",
