--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
     "build:lint": "tslint src/**/*.ts",
     "build:ngc": "ngc -p tsconfig.build.json",
-    "build:declarations": "tsc -p tsconfig.build.json",
+    "build:html": "node copy.js",
     "build:bundles": "rollup -c rollup.config.js",
-    "build": "npm-run-all build:lint build:bundles build:declarations build:ngc",
+    "build": "npm-run-all build:lint build:bundles build:ngc build:html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
