--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "@angular/core": "^2.0.0-rc"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.6",
-    "@angular/compiler": "^2.0.0-rc.6",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
     "@angular/compiler-cli": "^0.6.0",
-    "@angular/core": "^2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/http": "^2.0.0-rc.6",
-    "@angular/platform-browser": "^2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.6",
-    "@angular/router": "^3.0.0-rc.2",
+    "@angular/core": "^2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/router": "^3.0.0",
     "@types/core-js": "^0.9.32",
     "@types/requirejs": "^2.1.26",
     "@types/tether": "^1.1.26",
