--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@angular/platform-browser-dynamic": "^2.0.1",
     "@angular/router": "^3.0.1",
     "@types/core-js": "^0.9.34",
+    "@types/marked": "0.0.28",
     "@types/requirejs": "^2.1.28",
     "@types/tether": "^1.1.27",
     "angular2-template-loader": "^0.5.0",
@@ -77,10 +78,11 @@
     "vcl-preprocessor": "^0.1.1",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-server": "^2.1.0-beta.3",
-    "zone.js": "0.6.25"
+    "zone.js": "0.6.21"
   },
   "dependencies": {
     "hammerjs": "^2.0.8",
+    "marked": "^0.3.6",
     "tether": "^1.3.7"
   }
 }
