--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:serve": "webpack-dev-server --env.ENV development --content-base demo",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
+    "build:docs": "webpack",
     "build:lint": "tslint src/**/*.ts",
     "build:ngc": "ngc -p tsconfig.build.json",
     "build:html": "node copy.js",
@@ -59,7 +60,9 @@
     "core-js": "^2.4.1",
     "cpr": "^2.0.0",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fsmonitor": "^0.2.4",
+    "html-webpack-plugin": "^2.22.0",
     "ignore-loader": "^0.1.1",
     "npm-run-all": "^3.1.0",
     "postcss-cli": "^2.6.0",
@@ -68,6 +71,8 @@
     "rollup-plugin-angular": "^0.4.3",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-typescript": "^0.8.1",
+    "style-loader": "^0.13.1",
+    "css-loader": "^0.25.0",
     "rxjs": "5.0.0-beta.12",
     "tslint": "^3.15.1",
     "typescript": "^2.0.3",
