--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:serve": "webpack-dev-server --env.ENV development --content-base demo",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
-    "build:docs": "webpack",
+    "build:docs": "webpack --env.ENV production",
     "build:lint": "tslint src/**/*.ts",
     "build:ngc": "ngc -p tsconfig.build.json",
     "build:html": "node copy.js",
@@ -62,7 +62,6 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fsmonitor": "^0.2.4",
-    "html-webpack-plugin": "^2.22.0",
     "ignore-loader": "^0.1.1",
     "npm-run-all": "^3.1.0",
     "postcss-cli": "^2.6.0",
