--- a/package.json
+++ b/package.json
@@ -39,23 +39,23 @@
     "@angular/core": "^2.0.0-rc"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.2",
-    "@angular/compiler": "^2.0.2",
-    "@angular/compiler-cli": "^0.6.4",
-    "@angular/core": "^2.0.2",
-    "@angular/forms": "2.0.2",
-    "@angular/http": "^2.0.2",
-    "@angular/platform-browser": "^2.0.2",
-    "@angular/platform-browser-dynamic": "^2.0.2",
-    "@angular/router": "^3.0.2",
+    "@angular/common": "^2.1.0",
+    "@angular/compiler": "^2.1.0",
+    "@angular/compiler-cli": "^2.1.0",
+    "@angular/core": "^2.1.0",
+    "@angular/forms": "2.1.0",
+    "@angular/http": "^2.1.0",
+    "@angular/platform-browser": "^2.1.0",
+    "@angular/platform-browser-dynamic": "^2.1.0",
+    "@angular/router": "^3.1.0",
     "@types/core-js": "^0.9.34",
     "@types/marked": "0.0.28",
     "@types/requirejs": "^2.1.28",
     "@types/tether": "^1.1.27",
     "angular2-template-loader": "^0.5.0",
-    "autoprefixer": "^6.5.0",
+    "autoprefixer": "^6.5.1",
     "awesome-typescript-loader": "^2.2.4",
-    "browser-sync": "^2.17.2",
+    "browser-sync": "^2.17.3",
     "connect-history-api-fallback": "^1.3.0",
     "core-js": "^2.4.1",
     "cpr": "^2.0.0",
@@ -72,7 +72,7 @@
     "rollup-plugin-typescript": "^0.8.1",
     "style-loader": "^0.13.1",
     "css-loader": "^0.25.0",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.0-rc.1",
     "tslint": "^3.15.1",
     "typescript": "^2.0.3",
     "vcl-core-modules": "^0.1.1",
