--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "core-js": "^2.4.1",
     "cpr": "^2.0.0",
+    "css-loader": "^0.25.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fsmonitor": "^0.2.4",
@@ -70,9 +71,8 @@
     "rollup-plugin-angular": "^0.4.3",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-typescript": "^0.8.1",
-    "style-loader": "^0.13.1",
-    "css-loader": "^0.25.0",
     "rxjs": "5.0.0-rc.1",
+    "style-loader": "^0.13.1",
     "tslint": "^3.15.1",
     "typescript": "^2.0.3",
     "vcl-core-modules": "^0.1.1",
@@ -85,6 +85,7 @@
     "zone.js": "0.6.25"
   },
   "dependencies": {
+    "fuse.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "marked": "^0.3.6",
     "tether": "^1.3.7"
