--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "demo": "npm run dev",
     "dev": "npm-run-all dev:vcl --parallel dev:serve dev:styles",
-    "dev:serve": "webpack-dev-server --env.ENV development --content-base demo",
+    "dev:serve": "webpack-dev-server --env.ENV development",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
     "docs": "webpack --env.ENV production",
