--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:bundles": "rollup -c rollup.config.js",
     "build": "npm-run-all build:lint build:bundles build:ngc build:html",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npm run build:lint && tslint demo/**/*.ts"
+    "lint": "npm run build:lint && tslint demo/**/*.ts",
+    "docker": "docker rm -f ngvcl && docker run -it --name ngvcl -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash"
   },
   "repository": {
     "type": "git",
