Use subtree to push docs to gh-pages branch

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:serve": "webpack-dev-server --env.ENV development",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
-    "docs": "webpack --env.ENV production",
+    "docs:build": "webpack --env.ENV production",
+    "docs:push": "git subtree push --prefix docs origin gh-pages",
     "build:lint": "tslint src/**/*.ts",
     "build:ngc": "ngc -p tsconfig.build.json",
     "build:html": "node copy.js",
