--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "fsmonitor": "^0.2.4",
     "ignore-loader": "^0.1.1",
+    "json-loader": "^0.5.4",
     "npm-run-all": "^3.1.1",
     "postcss-cli": "^2.6.0",
     "raw-loader": "^0.5.1",
@@ -90,6 +91,7 @@
   "dependencies": {
     "fuse.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "jsoneditor": "5.5.10",
     "marked": "^0.3.6",
     "tether": "^1.3.7"
   }
