--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     "vcl-default-theme-terms": "^0.1.0",
     "vcl-font-awesome": "^0.1.0",
     "vcl-preprocessor": "^0.1.1",
-    "webpack": "^2.1.0-beta.20",
-    "webpack-dev-server": "^2.1.0-beta.3",
+    "webpack": "2.1.0-beta.20",
+    "webpack-dev-server": "2.1.0-beta.3",
     "zone.js": "0.6.26"
   },
   "dependencies": {
