--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "demo": "npm run dev",
     "dev": "npm-run-all dev:vcl --parallel dev:serve dev:styles",
-    "dev:serve": "webpack-dev-server --env.ENV development",
+    "dev:serve": "webpack-dev-server --env.ENV development --host 0.0.0.0 --content-base docs/",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
     "docs:build": "webpack --env.ENV production",
@@ -59,7 +59,7 @@
     "autoprefixer": "^6.5.1",
     "awesome-typescript-loader": "^2.2.4",
     "browser-sync": "^2.17.5",
-    "connect-history-api-fallback": "^1.3.0",
+    "connect-history-api-fallback": "1.3.0",
     "core-js": "^2.4.1",
     "cpr": "^2.0.0",
     "css-loader": "^0.25.0",
