--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ 
+{
   "name": "ng-vcl",
   "version": "0.1.0",
   "description": "",
@@ -17,7 +17,8 @@
     "build": "npm-run-all build:lint build:bundles build:ngc build:html",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npm run build:lint && tslint demo/**/*.ts",
-    "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash"
+    "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash",
+    "gitadddist": "git add dist/"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,8 @@
     "VCL"
   ],
   "pre-commit": [
-    "build"
+    "build",
+    "gitadddist"
   ],
   "author": "The ng-vcl authors",
   "license": "MIT",
