--- a/package.json
+++ b/package.json
@@ -44,47 +44,47 @@
     "format": "esm"
   },
   "peerDependencies": {
-    "@angular/core": "^2.0.0-rc"
+    "@angular/core": "2.1.2"
   },
   "devDependencies": {
-    "@angular/common": "^2.1.2",
-    "@angular/compiler": "^2.1.2",
-    "@angular/compiler-cli": "^2.1.2",
-    "@angular/core": "^2.1.2",
+    "@angular/common": "2.1.2",
+    "@angular/compiler": "2.1.2",
+    "@angular/compiler-cli": "2.1.2",
+    "@angular/core": "2.1.2",
     "@angular/forms": "2.1.2",
-    "@angular/http": "^2.1.2",
-    "@angular/platform-browser": "^2.1.2",
-    "@angular/platform-browser-dynamic": "^2.1.2",
-    "@angular/router": "^3.1.2",
-    "@types/core-js": "^0.9.34",
+    "@angular/http": "2.1.2",
+    "@angular/platform-browser": "2.1.2",
+    "@angular/platform-browser-dynamic": "2.1.2",
+    "@angular/router": "3.1.2",
+    "@types/core-js": "0.9.34",
     "@types/marked": "0.0.28",
-    "@types/requirejs": "^2.1.28",
-    "@types/tether": "^1.1.27",
-    "angular2-template-loader": "^0.6.0",
-    "autoprefixer": "^6.5.1",
-    "awesome-typescript-loader": "^2.2.4",
-    "browser-sync": "^2.17.5",
+    "@types/requirejs": "2.1.28",
+    "@types/tether": "1.1.27",
+    "angular2-template-loader": "0.6.0",
+    "autoprefixer": "6.5.1",
+    "awesome-typescript-loader": "2.2.4",
+    "browser-sync": "2.17.5",
     "connect-history-api-fallback": "1.3.0",
-    "core-js": "^2.4.1",
-    "cpr": "^2.0.0",
-    "css-loader": "^0.25.0",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "fsmonitor": "^0.2.4",
-    "ignore-loader": "^0.1.1",
-    "json-loader": "^0.5.4",
-    "npm-run-all": "^3.1.1",
-    "postcss-cli": "^2.6.0",
-    "pre-commit": "^1.1.3",
-    "raw-loader": "^0.5.1",
-    "rollup": "^0.36.3",
-    "rollup-plugin-angular": "^0.4.3",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
+    "core-js": "2.4.1",
+    "cpr": "2.0.0",
+    "css-loader": "0.25.0",
+    "express": "4.14.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "fsmonitor": "0.2.4",
+    "ignore-loader": "0.1.1",
+    "json-loader": "0.5.4",
+    "npm-run-all": "3.1.1",
+    "postcss-cli": "2.6.0",
+    "pre-commit": "1.1.3",
+    "raw-loader": "0.5.1",
+    "rollup": "0.36.3",
+    "rollup-plugin-angular": "0.4.3",
+    "rollup-plugin-node-resolve": "2.0.0",
+    "rollup-plugin-typescript": "0.8.1",
     "rxjs": "5.0.0-rc.1",
-    "style-loader": "^0.13.1",
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.6",
+    "style-loader": "0.13.1",
+    "tslint": "3.15.1",
+    "typescript": "2.0.6",
     "vcl-core-modules": "^0.1.1",
     "vcl-default-theme": "^0.1.2",
     "vcl-default-theme-terms": "^0.1.0",
@@ -97,7 +97,7 @@
   "dependencies": {
     "fuse.js": "^2.5.0",
     "hammerjs": "^2.0.8",
-    "jsoneditor": "5.5.10",
+    "jsoneditor": "^5.5.10",
     "marked": "^0.3.6",
     "tether": "^1.3.7"
   }
