--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "fuse.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "jsoneditor": "^5.5.10",
+    "jsonschema": "^1.1.0",
     "marked": "^0.3.6",
     "tether": "^1.3.7"
   }
