--- a/package.json
+++ b/package.json
@@ -46,31 +46,31 @@
     "format": "esm"
   },
   "peerDependencies": {
-    "@angular/core": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/common": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/router": "3.1.2"
+    "@angular/common": "^2.2.2",
+    "@angular/core": "^2.2.2",
+    "@angular/forms": "^2.2.2",
+    "@angular/http": "^2.2.2",
+    "@angular/platform-browser": "^2.2.2",
+    "@angular/router": "^3.2.2"
   },
   "devDependencies": {
-    "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/compiler-cli": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/router": "3.1.2",
+    "@angular/common": "^2.2.2",
+    "@angular/compiler": "^2.2.2",
+    "@angular/compiler-cli": "^2.2.2",
+    "@angular/core": "^2.2.2",
+    "@angular/forms": "^2.2.2",
+    "@angular/http": "^2.2.2",
+    "@angular/platform-browser": "^2.2.2",
+    "@angular/platform-browser-dynamic": "^2.2.2",
+    "@angular/router": "^3.2.2",
     "@types/core-js": "0.9.34",
     "@types/marked": "0.0.28",
     "@types/requirejs": "2.1.28",
     "@types/tether": "1.1.27",
     "angular2-template-loader": "0.6.0",
-    "autoprefixer": "6.5.1",
+    "autoprefixer": "^6.5.3",
     "awesome-typescript-loader": "2.2.4",
-    "browser-sync": "2.17.5",
+    "browser-sync": "^2.18.2",
     "connect-history-api-fallback": "1.3.0",
     "core-js": "2.4.1",
     "cpr": "2.0.0",
@@ -78,6 +78,7 @@
     "express": "4.14.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "fsmonitor": "0.2.4",
+    "fuse.js": "^2.5.0",
     "ignore-loader": "0.1.1",
     "json-loader": "0.5.4",
     "npm-run-all": "3.1.1",
@@ -91,7 +92,7 @@
     "rxjs": "5.0.0-rc.1",
     "style-loader": "0.13.1",
     "tslint": "3.15.1",
-    "typescript": "2.0.6",
+    "typescript": "^2.0.10",
     "vcl-core-modules": "^0.1.1",
     "vcl-default-theme": "^0.1.2",
     "vcl-default-theme-terms": "^0.1.0",
@@ -99,8 +100,7 @@
     "vcl-preprocessor": "^0.1.1",
     "webpack": "2.1.0-beta.20",
     "webpack-dev-server": "2.1.0-beta.3",
-    "zone.js": "0.6.26",
-    "fuse.js": "^2.5.0"
+    "zone.js": "0.6.26"
   },
   "dependencies": {
     "hammerjs": "^2.0.8",
