--- a/package.json
+++ b/package.json
@@ -46,23 +46,23 @@
     "format": "esm"
   },
   "peerDependencies": {
-    "@angular/common": "^2.2.2",
-    "@angular/core": "^2.2.2",
-    "@angular/forms": "^2.2.2",
-    "@angular/http": "^2.2.2",
-    "@angular/platform-browser": "^2.2.2",
-    "@angular/router": "^3.2.2"
+    "@angular/common": "^2",
+    "@angular/core": "^2",
+    "@angular/forms": "^",
+    "@angular/http": "^2",
+    "@angular/platform-browser": "^2",
+    "@angular/router": "^2"
   },
   "devDependencies": {
-    "@angular/common": "^2.2.2",
-    "@angular/compiler": "^2.2.2",
-    "@angular/compiler-cli": "^2.2.2",
-    "@angular/core": "^2.2.2",
-    "@angular/forms": "^2.2.2",
-    "@angular/http": "^2.2.2",
-    "@angular/platform-browser": "^2.2.2",
-    "@angular/platform-browser-dynamic": "^2.2.2",
-    "@angular/router": "^3.2.2",
+    "@angular/common": "^2.2.3",
+    "@angular/compiler": "^2.2.3",
+    "@angular/compiler-cli": "^2.2.3",
+    "@angular/core": "^2.2.3",
+    "@angular/forms": "^2.2.3",
+    "@angular/http": "^2.2.3",
+    "@angular/platform-browser": "^2.2.3",
+    "@angular/platform-browser-dynamic": "^2.2.3",
+    "@angular/router": "^3.2.3",
     "@types/core-js": "0.9.34",
     "@types/marked": "0.0.28",
     "@types/requirejs": "2.1.28",
@@ -106,6 +106,7 @@
     "hammerjs": "^2.0.8",
     "jsoneditor": "^5.5.10",
     "jsonschema": "^1.1.0",
+    "marked": "^0.3.6",
     "tether": "^1.3.7"
   }
 }
