--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "@angular/forms": "^2.1.0",
     "@angular/http": "^2.1.0",
     "@angular/platform-browser": "^2.1.0",
-    "@angular/router": "^3.1.0"
+    "@angular/router": "^3.1.0",
+    "rxjs": "5.0.0-rc.1"
   },
   "devDependencies": {
     "@angular/common": "^2.2.3",
