Upgrade webpack to latest and use webpack as bundler for ng-vcl lib

--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "scripts": {
     "demo": "npm run dev",
     "dev": "npm-run-all dev:vcl --parallel dev:serve dev:styles",
-    "dev:serve": "webpack-dev-server --env.ENV development --host 0.0.0.0 --content-base docs/",
+    "dev:serve": "webpack-dev-server --config webpack.config.demo.js --env.ENV development",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
     "docs": "npm-run-all docs:build docs:commit docs:push",
-    "docs:build": "webpack --env.ENV production",
+    "docs:build": "webpack --config webpack.config.demo.js --env.ENV production",
     "docs:commit": "git commit -m 'Docs' -- docs",
     "docs:push": "git push origin `git subtree split --prefix docs master`:gh-pages --force",
     "build:lint": "tslint src/**/*.ts",
     "build:ngc": "ngc -p tsconfig.build.json",
     "build:html": "node copy.js",
-    "build:bundles": "rollup -c rollup.config.js",
+    "build:bundles": "webpack --config webpack.config.js --env.ENV production",
     "build": "npm-run-all build:lint build:bundles build:ngc build:html",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npm run build:lint && tslint demo/**/*.ts",
@@ -37,14 +37,8 @@
   ],
   "author": "The ng-vcl authors",
   "license": "MIT",
-  "main": "dist/ng-vcl.cjs.js",
+  "main": "dist/ng-vcl.js",
   "typings": "dist/index.d.ts",
-  "jsnext:main": "dist/ng-vcl.esm.js",
-  "module": "dist/ng-vcl.esm.js",
-  "jspm": {
-    "main": "dist/ng-vcl.esm.js",
-    "format": "esm"
-  },
   "peerDependencies": {
     "@angular/common": "^2.1.0",
     "@angular/core": "^2.1.0",
@@ -73,23 +67,21 @@
     "awesome-typescript-loader": "2.2.4",
     "browser-sync": "^2.18.2",
     "connect-history-api-fallback": "1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
     "core-js": "2.4.1",
     "cpr": "2.0.0",
-    "css-loader": "0.25.0",
+    "css-loader": "^0.26.0",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "fsmonitor": "0.2.4",
     "fuse.js": "^2.5.0",
-    "ignore-loader": "0.1.1",
+    "html-webpack-plugin": "^2.24.1",
+    "ignore-loader": "^0.1.2",
     "json-loader": "0.5.4",
     "npm-run-all": "3.1.1",
     "postcss-cli": "2.6.0",
     "pre-commit": "1.1.3",
     "raw-loader": "0.5.1",
-    "rollup": "0.36.3",
-    "rollup-plugin-angular": "0.4.3",
-    "rollup-plugin-node-resolve": "2.0.0",
-    "rollup-plugin-typescript": "0.8.1",
     "rxjs": "5.0.0-rc.1",
     "style-loader": "0.13.1",
     "tslint": "3.15.1",
@@ -99,8 +91,8 @@
     "vcl-default-theme-terms": "^0.1.0",
     "vcl-font-awesome": "^0.1.0",
     "vcl-preprocessor": "^0.1.1",
-    "webpack": "2.1.0-beta.20",
-    "webpack-dev-server": "2.1.0-beta.3",
+    "webpack": "2.1.0-beta.27",
+    "webpack-dev-server": "2.1.0-beta.11",
     "zone.js": "0.6.26"
   },
   "dependencies": {
