--- a/package.json
+++ b/package.json
@@ -8,19 +8,17 @@
     "dev:serve": "webpack-dev-server --config webpack.config.demo.js --env.ENV development",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
-    "docs": "npm-run-all docs:build docs:commit docs:push",
-    "docs:build": "webpack --config webpack.config.demo.js --env.ENV production",
-    "docs:commit": "git commit -m 'Docs' -- docs",
-    "docs:push": "git push origin `git subtree split --prefix docs master`:gh-pages --force",
+    "docs": "webpack --config webpack.config.demo.js --env.ENV production",
     "build:lint": "tslint src/**/*.ts",
     "build:ngc": "ngc -p tsconfig.build.json",
-    "build:html": "node copy.js",
-    "build:bundles": "webpack --config webpack.config.js --env.ENV production",
-    "build": "npm-run-all build:lint build:bundles build:ngc build:html",
+    "build:copy": "node copy.js",
+    "build:bundle": "webpack --config webpack.config.js --env.ENV production",
+    "build": "npm-run-all build:lint build:bundle build:ngc build:copy",
+    "deploy:dist": "git-directory-deploy --directory dist --branch dist",
+    "deploy:docs": "git-directory-deploy --directory docs --branch gh-pages",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npm run build:lint && tslint demo/**/*.ts",
-    "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash",
-    "gitadddist": "git add dist/"
+    "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash"
   },
   "repository": {
     "type": "git",
@@ -31,14 +29,16 @@
     "angular",
     "VCL"
   ],
-  "pre-commit": [
+  "pre-push": [
     "build",
-    "gitadddist"
+    "docs",
+    "deploy:dist",
+    "deploy:docs"
   ],
   "author": "The ng-vcl authors",
   "license": "MIT",
-  "main": "dist/ng-vcl.js",
-  "typings": "dist/index.d.ts",
+  "main": "ng-vcl.js",
+  "typings": "index.d.ts",
   "peerDependencies": {
     "@angular/common": "^2.1.0",
     "@angular/core": "^2.1.0",
@@ -75,12 +75,14 @@
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "fsmonitor": "0.2.4",
     "fuse.js": "^2.5.0",
+    "git-directory-deploy": "^1.5.1",
     "html-webpack-plugin": "^2.24.1",
     "ignore-loader": "^0.1.2",
     "json-loader": "0.5.4",
+    "marked": "^0.3.6",
     "npm-run-all": "3.1.1",
     "postcss-cli": "2.6.0",
-    "pre-commit": "1.1.3",
+    "pre-push": "^0.1.1",
     "raw-loader": "0.5.1",
     "rxjs": "5.0.0-rc.1",
     "style-loader": "0.13.1",
@@ -99,7 +101,6 @@
     "hammerjs": "^2.0.8",
     "jsoneditor": "^5.5.10",
     "jsonschema": "^1.1.0",
-    "marked": "^0.3.6",
     "tether": "^1.3.7"
   }
 }
