--- a/package.json
+++ b/package.json
@@ -95,5 +95,8 @@
     "jsoneditor": "^5.5.10",
     "jsonschema": "^1.1.0",
     "tether": "^1.3.7"
-  }
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
