--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
     "docs": "webpack --config webpack.config.demo.js --env.ENV production",
-    "build:lint": "tslint src/**/*.ts",
+    "docs:lint": "tslint 'demo/**/*.ts'",
+    "build:lint": "./node_modules/.bin/tslint './src/**/*.ts'",
     "build:ngc": "ngc -p tsconfig.build.json",
     "build:copy": "node copy.js",
     "build:bundle": "webpack --config webpack.config.js --env.ENV production",
@@ -17,7 +18,7 @@
     "deploy:dist": "git-directory-deploy --directory dist --branch dist",
     "deploy:docs": "git-directory-deploy --directory docs --branch gh-pages",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npm run build:lint && tslint demo/**/*.ts",
+    "lint": "npm-run-all build:lint docs:lint",
     "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash"
   },
   "repository": {
@@ -76,10 +77,11 @@
     "marked": "^0.3.6",
     "npm-run-all": "3.1.1",
     "postcss-cli": "2.6.0",
+    "pre-commit": "^1.1.3",
     "raw-loader": "0.5.1",
     "rxjs": "5.0.0-rc.1",
     "style-loader": "0.13.1",
-    "tslint": "3.15.1",
+    "tslint": "^4.0.2",
     "typescript": "^2.0.10",
     "vcl-core-modules": "^0.1.1",
     "vcl-default-theme": "^0.1.2",
