--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "dev:serve": "webpack-dev-server --config webpack.config.demo.js --env.ENV development --env.HMR true",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
-    "docs": "webpack --config webpack.config.demo.js --env.ENV production",
     "docs:lint": "tslint 'demo/**/*.ts'",
-    "build:lint": "./node_modules/.bin/tslint './src/**/*.ts'",
+    "docs:clean": "rimraf docs",
+    "docs:build": "webpack --config webpack.config.demo.js --env.ENV production",
+    "docs": "npm-run-all docs:lint docs:clean docs:build",
+    "build:lint": "tslint './src/**/*.ts'",
+    "build:clean": "rimraf dist",
+    "build:bundle": "webpack --config webpack.config.js --env.ENV production",
     "build:ngc": "ngc -p tsconfig.build.json",
     "build:copy": "node copy.js",
-    "build:bundle": "webpack --config webpack.config.js --env.ENV production",
-    "build": "npm-run-all build:lint build:bundle build:ngc build:copy",
+    "build": "npm-run-all build:lint build:clean build:bundle build:ngc build:copy",
     "deploy:dist": "git-directory-deploy --directory dist --branch dist",
     "deploy:docs": "git-directory-deploy --directory docs --branch gh-pages",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npm-run-all build:lint docs:lint",
+    "clean": "npm-run-all build:clean docs:clean",
     "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash"
   },
   "repository": {
@@ -79,6 +83,7 @@
     "postcss-cli": "2.6.0",
     "pre-commit": "^1.1.3",
     "raw-loader": "0.5.1",
+    "rimraf": "^2.5.4",
     "rxjs": "5.0.0-rc.1",
     "style-loader": "0.13.1",
     "tslint": "^4.0.2",
