Lock typescript version to 2.0.x. TS >= 2.1 will not work on awesome-ts-loader 2.2.4 See https://github.com/s-panferov/awesome-typescript-loader/issues/293

--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "rxjs": "5.0.0-rc.1",
     "style-loader": "0.13.1",
     "tslint": "^4.0.2",
-    "typescript": "^2.0.10",
+    "typescript": "~2.0.10",
     "vcl-core-modules": "^0.1.1",
     "vcl-default-theme": "^0.1.2",
     "vcl-default-theme-terms": "^0.1.0",
