--- a/package.json
+++ b/package.json
@@ -45,18 +45,18 @@
     "@angular/http": "^2.1.0",
     "@angular/platform-browser": "^2.1.0",
     "@angular/router": "^3.1.0",
-    "rxjs": "5.0.0-rc.1"
+    "rxjs": "5.0.0-rc.4"
   },
   "devDependencies": {
-    "@angular/common": "^2.2.3",
-    "@angular/compiler": "^2.2.3",
-    "@angular/compiler-cli": "^2.2.3",
-    "@angular/core": "^2.2.3",
-    "@angular/forms": "^2.2.3",
-    "@angular/http": "^2.2.3",
-    "@angular/platform-browser": "^2.2.3",
-    "@angular/platform-browser-dynamic": "^2.2.3",
-    "@angular/router": "^3.2.3",
+    "@angular/common": "^2.3.0",
+    "@angular/compiler": "^2.3.0",
+    "@angular/compiler-cli": "^2.3.0",
+    "@angular/core": "^2.3.0",
+    "@angular/forms": "^2.3.0",
+    "@angular/http": "^2.3.0",
+    "@angular/platform-browser": "^2.3.0",
+    "@angular/platform-browser-dynamic": "^2.3.0",
+    "@angular/router": "^3.3.0",
     "@types/core-js": "0.9.34",
     "@types/marked": "0.0.28",
     "@types/requirejs": "2.1.28",
@@ -84,7 +84,7 @@
     "pre-commit": "^1.1.3",
     "raw-loader": "0.5.1",
     "rimraf": "^2.5.4",
-    "rxjs": "5.0.0-rc.1",
+    "rxjs": "^5.0.0-rc.4",
     "style-loader": "0.13.1",
     "tslint": "^4.0.2",
     "typescript": "~2.0.10",
@@ -95,7 +95,7 @@
     "vcl-preprocessor": "^0.1.1",
     "webpack": "2.1.0-beta.27",
     "webpack-dev-server": "2.1.0-beta.11",
-    "zone.js": "0.6.26"
+    "zone.js": "^0.7.2"
   },
   "dependencies": {
     "hammerjs": "^2.0.8",
