Upgrade deps + fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
       "requirejs"
     ]
   },
+  "include": [
+    "./demo/**/*.ts",
+    "./src/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "dist",
