--- a/package.json
+++ b/package.json
@@ -45,25 +45,25 @@
     "@angular/http": "^2.3.0",
     "@angular/platform-browser": "^2.3.0",
     "@angular/router": "^3.3.0",
-    "rxjs": "5.0.0-rc.4"
+    "rxjs": "^5.0.1"
   },
   "devDependencies": {
-    "@angular/common": "^2.3.0",
-    "@angular/compiler": "^2.3.0",
-    "@angular/compiler-cli": "^2.3.0",
-    "@angular/core": "^2.3.0",
-    "@angular/forms": "^2.3.0",
-    "@angular/http": "^2.3.0",
-    "@angular/platform-browser": "^2.3.0",
-    "@angular/platform-browser-dynamic": "^2.3.0",
-    "@angular/router": "^3.3.0",
-    "@types/core-js": "0.9.34",
-    "@types/marked": "0.0.28",
-    "@types/requirejs": "2.1.28",
-    "@types/tether": "1.1.27",
-    "angular2-template-loader": "0.6.0",
-    "autoprefixer": "^6.5.3",
-    "awesome-typescript-loader": "2.2.4",
+    "@angular/common": "^2.4.2",
+    "@angular/compiler": "^2.4.2",
+    "@angular/compiler-cli": "^2.4.2",
+    "@angular/core": "^2.4.2",
+    "@angular/forms": "^2.4.2",
+    "@angular/http": "^2.4.2",
+    "@angular/platform-browser": "^2.4.2",
+    "@angular/platform-browser-dynamic": "^2.4.2",
+    "@angular/router": "^3.4.2",
+    "@types/core-js": "~0.9.34",
+    "@types/marked": "~0.0.28",
+    "@types/requirejs": "~2.1.28",
+    "@types/tether": "~1.1.27",
+    "angular2-template-loader": "~0.6.0",
+    "autoprefixer": "~6.5.3",
+    "awesome-typescript-loader": "3.0.0-beta.17",
     "browser-sync": "^2.18.2",
     "connect-history-api-fallback": "1.3.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -87,7 +87,7 @@
     "rxjs": "^5.0.0-rc.4",
     "style-loader": "0.13.1",
     "tslint": "^4.0.2",
-    "typescript": "~2.0.10",
+    "typescript": "~2.1.4",
     "vcl-core-modules": "^0.1.1",
     "vcl-default-theme": "^0.1.2",
     "vcl-default-theme-terms": "^0.1.0",
