--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "hammerjs": "^2.0.8",
     "jsoneditor": "^5.5.10",
     "jsonschema": "^1.1.0",
-    "tether": "^1.3.7"
+    "tether": "1.4.0"
   },
   "pre-commit": [
     "lint"
