demo: use highlight.js for syntax highlighting

--- a/package.json
+++ b/package.json
@@ -75,9 +75,12 @@
     "fsmonitor": "0.2.4",
     "fuse.js": "^2.5.0",
     "git-directory-deploy": "^1.5.1",
+    "highlight-loader": "^0.7.2",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "ignore-loader": "^0.1.2",
     "json-loader": "0.5.4",
+    "markdown-loader": "^0.1.7",
     "marked": "^0.3.6",
     "npm-run-all": "3.1.1",
     "postcss-cli": "2.6.0",
