[polyfills.ts]: include es7.array.includes; remove utils.ts; use ts es6 typings

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -9,8 +9,14 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "dist",
     "types": [
-      "core-js",
       "requirejs"
+    ],
+    "lib": [
+      "dom",
+      "es6",
+      "dom.iterable",
+      "scripthost",
+      "es2016.array.include"
     ]
   },
   "include": [
