--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "dist",
+    "types": [
+      "requirejs"
+    ],
     "lib": [
       "dom",
       "es6",
