--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@angular/platform-browser": "^2.4.5",
     "@angular/platform-browser-dynamic": "^2.4.5",
     "@angular/router": "^3.4.5",
+    "hammerjs": "^2.0.8",
     "@types/marked": "~0.0.28",
     "@types/requirejs": "~2.1.28",
     "@types/tether": "~1.4.0",
