Build overhaul & refactoring - part II

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@ng-vcl/ng-vcl",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A comprehensive library of components for Angular 2 with VCL based styling",
   "scripts": {
-    "lint": "tslint './src/**/*.ts'",
+    "lint": "npm-run-all lint:src lint:demo",
+    "lint:src": "tslint './src/**/*.ts'",
+    "lint:demo": "tslint './src/**/*.ts'",
     "dev": "npm-run-all dev:vcl --parallel dev:serve dev:styles",
     "dev:serve": "webpack-dev-server --config webpack.config.js --env.ENV development --env.HMR true",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
@@ -14,9 +16,10 @@
     "docs": "npm-run-all lint docs:clean docs:build",
     "build:clean": "rimraf dist",
     "build:gulp": "gulp build",
-    "build": "npm-run-all lint build:clean build:gulp",
+    "build": "npm-run-all lint:src build:clean build:gulp",
     "clean": "npm-run-all build:clean docs:clean",
     "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash",
+    "postinstall": "ts-node scripts/postinstall.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -63,7 +66,7 @@
     "@angular/router": "^3.4.5",
     "@types/gulp": "^3.8.32",
     "@types/marked": "~0.0.28",
-    "@types/requirejs": "~2.1.28",
+    "@types/node": "^7.0.5",
     "@types/tether": "~1.4.0",
     "angular2-template-loader": "~0.6.0",
     "autoprefixer": "~6.7.2",
@@ -72,7 +75,8 @@
     "core-js": "~2.4.1",
     "cpr": "~2.0.2",
     "css-loader": "~0.26.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.5",
+    "es6-promisify": "^5.0.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "fsmonitor": "~0.2.4",
     "fuse.js": "~2.6.1",
     "git-directory-deploy": "~1.5.1",
