--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -16,9 +16,7 @@
     "baseUrl": ".",
     "paths": {
     },
-    "types": [
-      "requirejs"
-    ],
+    "types": [ ],
     "lib": [
       "dom",
       "es6",
