--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-vcl/ng-vcl",
-  "version": "0.2.9",
+  "version": "0.3.0",
   "description": "A comprehensive library of components for Angular 2 with VCL based styling",
   "scripts": {
     "lint": "npm-run-all lint:src lint:demo",
@@ -32,23 +32,8 @@
     "angular",
     "VCL"
   ],
-  "files": [
-    "dist"
-  ],
   "author": "The ng-vcl authors",
   "license": "MIT",
-  "main": "dist/ng-vcl.js",
-  "typings": "dist/index.d.ts",
-  "peerDependencies": {
-    "@angular/common": "^2.3.0",
-    "@angular/core": "^2.3.0",
-    "@angular/forms": "^2.3.0",
-    "@angular/http": "^2.3.0",
-    "@angular/platform-browser": "^2.3.0",
-    "@angular/router": "^3.3.0",
-    "rxjs": "^5.0.3",
-    "hammerjs": "^2.0.8"
-  },
   "devDependencies": {
     "@angular/common": "^2.4.9",
     "@angular/compiler": "^2.4.9",
@@ -78,23 +63,27 @@
     "gulp": "^3.9.1",
     "gulp-better-rollup": "^1.0.2",
     "gulp-json-modify": "^1.0.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "hammerjs": "^2.0.8",
     "highlight-loader": "~0.7.2",
-    "html-loader": "~0.4.5",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "~2.28.0",
     "ignore-loader": "~0.1.2",
     "json-loader": "~0.5.4",
     "jsoneditor": "^5.5.11",
     "jsonschema": "^1.1.1",
-    "markdown-loader": "~2.0.0",
+    "markdown-loader": "^2.0.0",
     "marked": "~0.3.6",
-    "npm-run-all": "~4.0.2",
+    "merge-stream": "^1.0.1",
+    "npm-run-all": "^4.0.2",
     "plotly.js": "^1.24.0",
     "postcss-cli": "~3.0.0-beta",
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
     "resolve-bin": "^0.4.0",
-    "rimraf": "~2.6.1",
+    "rimraf": "^2.6.1",
+    "rollup-plugin-replace": "^1.1.1",
     "run-sequence": "^1.2.2",
     "rxjs": "^5.2.0",
     "style-loader": "~0.13.2",
