--- a/src/adv-http/package.json
+++ b/src/adv-http/package.json
@@ -8,8 +8,8 @@
   },
   "author": "The ng-vcl authors",
   "license": "MIT",
-  "module": "index.js",
-  "main": "index.umd.js",
+  "main": "adv-http.umd.js",
+  "module": "adv-http.js",
   "typings": "index.d.ts",
   "peerDependencies": {
     "@angular/core": "^2.3.0",
