--- a/src/ng-vcl/package.json
+++ b/src/ng-vcl/package.json
@@ -8,15 +8,16 @@
   },
   "author": "The ng-vcl authors",
   "license": "MIT",
-  "module": "index.js",
-  "main": "index.umd.js",
+  "main": "ng-vcl.umd.js",
+  "module": "ng-vcl.js",
   "typings": "index.d.ts",
   "peerDependencies": {
     "@angular/common": "^2.3.0",
     "@angular/core": "^2.3.0",
     "@angular/forms": "^2.3.0",
     "@angular/router": "^3.3.0",
-    "rxjs": "^5.0.3"
+    "rxjs": "^5.0.3",
+    "hammerjs": "^2.0.8"
   },
   "dependencies": { }
 }
