--- a/src/plotly/package.json
+++ b/src/plotly/package.json
@@ -8,8 +8,8 @@
   },
   "author": "The ng-vcl authors",
   "license": "MIT",
-  "module": "index.js",
-  "main": "index.umd.js",
+  "main": "plotly.umd.js",
+  "module": "plotly.js",
   "typings": "index.d.ts",
   "peerDependencies": {
     "@angular/common": "^2.3.0",
