--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "strictNullChecks": true,
+    "skipLibCheck": true,
     "types": [
       "gulp",
       "node"
