ng 4 preparations - workaround for failing emitting metadata https://github.com/angular/angular/issues/13359

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -28,6 +28,6 @@
   "angularCompilerOptions": {
     "genDir": "../dist/@ng-vcl",
     "skipTemplateCodegen": true,
-    "skipMetadataEmit" : true
+    "skipMetadataEmit" : false
   }
 }
