--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^4.0.0-rc.6",
-    "@angular/common": "^4.0.0-rc.6",
-    "@angular/compiler": "^4.0.0-rc.6",
-    "@angular/compiler-cli": "^4.0.0-rc.6",
-    "@angular/core": "^4.0.0-rc.6",
-    "@angular/forms": "^4.0.0-rc.6",
-    "@angular/http": "^4.0.0-rc.6",
-    "@angular/platform-browser": "^4.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^4.0.0-rc.6",
-    "@angular/router": "^4.0.0-rc.6",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@types/gulp": "^4.0.2",
     "@types/marked": "~0.0.28",
     "@types/node": "^7.0.5",
