Add publish:next script

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build:gulp": "gulp build",
     "build": "npm-run-all lint:src build:clean build:gulp",
     "publish": "gulp publish",
+    "publish:next": "gulp publish:next",
     "clean": "npm-run-all build:clean docs:clean",
     "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash",
     "postinstall": "ts-node scripts/postinstall.ts",
