Use url/file-loader and enable url parsing in css-loader

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "css-loader": "^0.28.1",
     "es6-promisify": "^5.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "fsmonitor": "~0.2.4",
     "fuse.js": "~2.6.2",
     "git-directory-deploy": "~1.5.1",
@@ -93,6 +94,7 @@
     "ts-node": "^3.0.4",
     "tslint": "^5.2.0",
     "typescript": "^2.3.2",
+    "url-loader": "^0.5.8",
     "vcl-core-modules": "^0.1.4",
     "vcl-default-theme": "~0.1.3",
     "vcl-default-theme-terms": "~0.1.0",
