Use animation builder to support custom animations from external modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
       "@ng-vcl/json-editor/*": ["src/json-editor/*"],
       "@ng-vcl/plotly": ["src/plotly"],
       "@ng-vcl/plotly/*": ["src/plotly/*"],
-      "@ng-vcl/animations": ["src/animations"]
+      "@ng-vcl/animations": ["src/animations"],
+      "@ng-vcl/animations/*": ["src/animations/*"]
     }
   },
   "include": [
