Update angular to 4.2.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-vcl/ng-vcl",
-  "version": "0.3.3-4",
+  "version": "0.3.3-5",
   "description": "A comprehensive library of components for Angular 4 with VCL based styling",
   "scripts": {
     "lint": "tslint --type-check -p ./tsconfig.json",
@@ -35,16 +35,16 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "4.2.0-rc.2",
-    "@angular/common": "4.2.0-rc.2",
-    "@angular/compiler": "4.2.0-rc.2",
-    "@angular/compiler-cli": "4.2.0-rc.2",
-    "@angular/core": "4.2.0-rc.2",
-    "@angular/forms": "4.2.0-rc.2",
-    "@angular/http": "4.2.0-rc.2",
-    "@angular/platform-browser": "4.2.0-rc.2",
-    "@angular/platform-browser-dynamic": "4.2.0-rc.2",
-    "@angular/router": "4.2.0-rc.2",
+    "@angular/animations": "^4.2.0",
+    "@angular/common": "^4.2.0",
+    "@angular/compiler": "^4.2.0",
+    "@angular/compiler-cli": "^4.2.0",
+    "@angular/core": "^4.2.0",
+    "@angular/forms": "^4.2.0",
+    "@angular/http": "^4.2.0",
+    "@angular/platform-browser": "^4.2.0",
+    "@angular/platform-browser-dynamic": "^4.2.0",
+    "@angular/router": "^4.2.0",
     "@ngtools/webpack": "^1.4.0",
     "@types/gulp": "^4.0.2",
     "@types/node": "^7.0.18",
