--- a/src/ng-vcl/package.json
+++ b/src/ng-vcl/package.json
@@ -12,10 +12,10 @@
   "module": "ng-vcl.js",
   "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/common": "4.2.0-rc.1",
-    "@angular/core": "4.2.0-rc.1",
-    "@angular/forms": "4.2.0-rc.1",
-    "@angular/router": "4.2.0-rc.1",
+    "@angular/common": "^4.2.0",
+    "@angular/core": "^4.2.0",
+    "@angular/forms": "^4.2.0",
+    "@angular/router": "^4.2.0",
     "rxjs": "^5.0.1",
     "hammerjs": "^2.0.8"
   },
