Upgrade to webpack 3 and enable Scope Hoisting

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --config webpack.config.js --env.ENV=development --env.HMR=true",
     "dev:aot": "webpack-dev-server --config webpack.config.js --env.ENV=development --env.HMR=true --env.AOT=true",
     "docs:clean": "rimraf docs",
-    "docs:build": "webpack --config webpack.config.js --env.ENV production",
+    "docs:build": "webpack --config webpack.config.js --env.ENV=production --env.AOT=true",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
     "docs": "npm-run-all lint docs:clean docs:build",
     "build:clean": "rimraf dist",
@@ -81,7 +81,7 @@
     "marked": "~0.3.6",
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.0.2",
-    "plotly.js": "^1.26.1",
+    "plotly.js": "^1.28.0",
     "postcss-loader": "^2.0.6",
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
@@ -101,7 +101,7 @@
     "vcl-font-awesome": "~0.1.0",
     "vcl-loader": "github:vcl/loader",
     "vcl-preprocessor": "~0.1.1",
-    "webpack": "^2.5.1",
+    "webpack": "^3.0.0",
     "webpack-dev-server": "^2.4.5",
     "zone.js": "^0.8.5"
   },
